--- a/Java/设计模式.md
+++ b/Java/设计模式.md
@@ -28,4 +28,15 @@ public class ClassMaster {
 }
 ```
 ### Spring中的单例
+类变量使用`@Autowired`注解，自动注入对象  
+任何自动注入的实例对象，都默认只有一个实例对象，是单例的  
+例如：可能多个`Service`或`Control`等都需要用到用户服务，那么这些类中都会定义  
+```
+@Autowired
+private UsersService usersService;
+```
+>*Spring会保证只生成一个`UserServiceImpl`实例，注入到多个`Service`或`Control`中，不会为每个`Service`或`Control`分别`new`出多个`UserServiceImpl`实现类的实例*
 
+### 简单工厂模式+抽象工厂模式
+简单工厂模式适合创建一种对象，看以下类图  
+![简单工厂](../Pic/简单工厂.svg "双冒号")
