--- a/Java/设计模式.md
+++ b/Java/设计模式.md
@@ -6,7 +6,7 @@
 
 例如：一个班级只能有一个班主任。
 ![双冒号](../Pic/单例模式.svg "双冒号")
-```
+```java
 public class ClassMaster {
   private String id;
   // 班主任名称
@@ -31,7 +31,7 @@ public class ClassMaster {
 类变量使用`@Autowired`注解，自动注入对象  
 任何自动注入的实例对象，都默认只有一个实例对象，是单例的  
 例如：可能多个`Service`或`Control`等都需要用到用户服务，那么这些类中都会定义  
-```
+```java
 @Autowired
 private UsersService usersService;
 ```
@@ -59,7 +59,7 @@ public interface SnacksFactory {
 然后水果工厂`FruitFactory()`和饮料工厂`DrinkFactory`实现这个接口就行了。  
 水果工厂只生产水果，而不生产饮料，但是因为实现工厂接口后，必须也要实现`getDrink()`方法，这时候直接返回`null`即可；  
 同理饮料工厂也是一样。  
-```
+```java
 public class FruitFactory implements SnacksFactory {
     public Fruit getFruit(Customer customer) {
         Fruit fruit = null;
@@ -80,7 +80,7 @@ public class FruitFactory implements SnacksFactory {
 }
 ```
 `SnacksFactoryBuilder`是生产工厂的工厂，工厂用来生产产品实例，`SnacksFactoryBuilder`用来生产工厂实例
-```
+```java
 public class SnacksFactoryBuilder {
     public SnacksFactory buildFactory(String choice) {
         if (choice.equalsIgnoreCase("fruit")) {
@@ -95,7 +95,7 @@ public class SnacksFactoryBuilder {
 ### 工厂模式结合Spring
 可以为`SnacksFactoryBuilder`加上`@Component`注解，让框架管理实例，简单工厂的工厂类也可以去掉`static`，加上注解。  
 相应的，**任何**需要使用工厂的地方，只需要使用`@Autowired`注解让框架自动注入实例就行了。  
-```
+```java
 @Service
 public class XxxxxServiceImpl implements XxxxxService {
 
