--- a/Java/多线程.md
+++ b/Java/多线程.md
@@ -112,3 +112,69 @@ public class Ticket {
 但是`synchronized`为了实现这两个特性，付出的代价是：性能可能不高。因为方法加锁，同时只有一个线程竞争成功能够继续执行，其他很多线程是持续等待、响应慢的。所以`synchronized`不能滥用，比较适合的场景是：
 1. 写操作的场景：用户修改个人信息、点赞、收藏、下单等
 2. 尽量精确锁住最小的代码块，把最关键的写操作抽象成独立的方法加锁。不建议给大段的方法加锁
+
+## 悲观锁和乐观锁
+**乐观锁**：乐观锁其实就是不上锁。总是保证基于最新的数据进行更新。由于没有上锁，就提高了性能。`AtomicInteger`类的`incrementAndGet()`和`decrementAndGet()`方法就是典型的乐观锁  
+```java
+//学生注册领学号，保证不能重复
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class Register implements Runnable {
+    private static AtomicInteger count = new AtomicInteger(0);
+
+    private Student student;
+
+    public Register(Student student) {
+        this.student = student;
+    }
+
+    @Override
+    public void run() {
+        student.setId(count.incrementAndGet());
+        System.out.println("姓名：" + student.getName() + "，学号：" + student.getId());
+    }
+}
+```
+
+乐观锁不适用于多条数据需要修改、以及多个操作的整体顺序要求非常严格的场景，乐观锁适用于读数据比重更大的场景；  
+
+**悲观锁**：相对的，`synchronized`关键字是把整个方法执行前就上锁，**假设**其他线程**一定会修改数据**，所以提前防范。上锁的思想是悲观的。  
+```java
+//售卖火车票
+import java.util.concurrent.atomic.AtomicInteger;
+
+public class Ticket {
+    private AtomicInteger count = new AtomicInteger(30);
+
+    public synchronized void sell() {
+        int newCount = 0;
+        if (count.get() > 0) {
+            newCount = count.decrementAndGet();
+        }
+        System.out.println(Thread.currentThread().getName() + "：还剩下 " + newCount + " 张票");
+    }
+
+    public int getCount() {
+        return count.get();
+    }
+}
+```
+
+悲观锁适合写数据比重更大的应用场景。一般来说写数据的整体消耗时间更长些是可以接受的。
+## 并发容器
+### CompletableFuture应用
+CompletableFuture是一个异步任务编排、调度框架、以更优雅的方式实现组合式异步编程  
+```java
+CompletableFuture.supplyAsync(
+    () -> reg.regId(s)
+  )
+  .thenApply(student -> {
+    return dis.assignClasses(student);
+  })
+  .thenAccept(student -> {
+     System.out.println("姓名：" + student.getName() + "，学号：" + student.getId() + "，班级号：" + student.getClassId());
+  });
+```
+![CompletableFuture](../Pic/CompletableFuture.svg "CompletableFuture")   
+
+`supplyAsync()`用于开头，`thenAccept()`用于末尾，各自调用一次即可。中间有很多步骤，可以调用多次`thenApply()`
