--- a/Java/多线程.md
+++ b/Java/多线程.md
@@ -178,3 +178,46 @@ CompletableFuture.supplyAsync(
 ![CompletableFuture](../Pic/CompletableFuture.svg "CompletableFuture")   
 
 `supplyAsync()`用于开头，`thenAccept()`用于末尾，各自调用一次即可。中间有很多步骤，可以调用多次`thenApply()`
+
+## 线程池
+### 创建线程池
+```java
+import org.apache.commons.lang3.concurrent.BasicThreadFactory;
+
+import java.util.concurrent.*;
+
+public class StudentIDTest {
+
+  // 线程工厂
+  private static final ThreadFactory namedThreadFactory = new BasicThreadFactory.Builder()
+    .namingPattern("studentReg-pool-%d")
+    .daemon(true)
+    .build();
+
+  // 等待队列
+  private static final BlockingQueue<Runnable> workQueue = new LinkedBlockingQueue<Runnable>(1024);
+
+  // 线程池服务
+  private static final ThreadPoolExecutor EXECUTOR_SERVICE = new ThreadPoolExecutor(
+20,
+200,
+30,
+TimeUnit.SECONDS,
+workQueue,
+namedThreadFactory,
+new ThreadPoolExecutor.AbortPolicy()
+      );
+
+  public static void main(String[] args) {
+
+  }
+}
+```
+`BasicThreadFactory`需要依赖的库
+```java
+<dependency>
+  <groupId>org.apache.commons</groupId>
+  <artifactId>commons-lang3</artifactId>
+  <version>3.10</version>
+</dependency>
+```
